--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,7 +36,8 @@
   },
   "scripts": {
     "dev": "tsdown src/index.ts --format cjs,esm --dts --watch",
-    "build": "tsdown src/index.ts --format cjs,esm --dts --clean"
+    "build": "tsdown src/index.ts --format cjs,esm --dts --clean",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "tsdown": "catalog:",
