--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -37,7 +37,8 @@
   },
   "scripts": {
     "dev": "tsdown src/index.ts --format cjs,esm --dts --watch",
-    "build": "tsdown src/index.ts --format cjs,esm --dts --clean"
+    "build": "tsdown src/index.ts --format cjs,esm --dts --clean",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@temporal-contract/core": "workspace:*"
