--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,8 @@ packages:
   - packages/*
 
 catalog:
+  '@changesets/cli': 2.29.8
+  '@changesets/config': 3.1.2
   '@temporalio/client': 1.13.2
   '@temporalio/worker': 1.13.2
   '@temporalio/workflow': 1.13.2
