--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,15 @@
       "cache": false,
       "persistent": true
     },
+    "dev:worker": {
+      "cache": false,
+      "persistent": true,
+      "dependsOn": ["^build"]
+    },
+    "dev:client": {
+      "cache": false,
+      "dependsOn": ["^build"]
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
