--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -43,6 +43,7 @@
     "@temporal-contract/core": "workspace:*"
   },
   "devDependencies": {
+    "@temporal-contract/tsconfig": "workspace:*",
     "tsdown": "catalog:",
     "typescript": "catalog:",
     "zod": "catalog:"
