--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -44,6 +44,7 @@
     "@temporal-contract/core": "workspace:*"
   },
   "devDependencies": {
+    "@temporal-contract/tsconfig": "workspace:*",
     "@temporalio/client": "catalog:",
     "tsdown": "catalog:",
     "typescript": "catalog:",
