--- a/packages/worker-boxed/package.json
+++ b/packages/worker-boxed/package.json
@@ -42,6 +42,7 @@
     "zod": "catalog:"
   },
   "devDependencies": {
+    "@temporal-contract/tsconfig": "workspace:*",
     "@types/node": "catalog:",
     "tsdown": "catalog:",
     "typescript": "catalog:"
