--- a/samples/basic-order-processing/package.json
+++ b/samples/basic-order-processing/package.json
@@ -21,6 +21,7 @@
     "zod": "catalog:"
   },
   "devDependencies": {
+    "@temporal-contract/tsconfig": "workspace:*",
     "@types/node": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:"
