--- a/samples/boxed-order-processing/tsconfig.json
+++ b/samples/boxed-order-processing/tsconfig.json
@@ -1,14 +1,6 @@
 {
+  "extends": "@temporal-contract/tsconfig/sample.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "Node16",
-    "lib": ["ES2022"],
-    "moduleResolution": "Node16",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
     "outDir": "./dist",
     "rootDir": "./src"
   },
