--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,7 +3,12 @@
   "changelog": "@changesets/cli/changelog",
   "commit": false,
   "fixed": [
-    ["@temporal-contract/core", "@temporal-contract/contract", "@temporal-contract/worker", "@temporal-contract/client"]
+    [
+      "@temporal-contract/core",
+      "@temporal-contract/contract",
+      "@temporal-contract/worker",
+      "@temporal-contract/client"
+    ]
   ],
   "linked": [],
   "access": "public",
