feat: updates + signals + queries

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -47,6 +47,7 @@
     "@temporal-contract/tsconfig": "workspace:*",
     "@temporalio/client": "catalog:",
     "tsdown": "catalog:",
+    "type-fest": "5.3.1",
     "typescript": "catalog:",
     "zod": "catalog:"
   },
