--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,7 +3,7 @@ pre-commit:
   commands:
     format:
       glob: "*.{ts,tsx,js,jsx,json,yaml,yml}"
-      run: pnpm oxlint --fix {staged_files}
+      run: pnpm oxfmt {staged_files}
       stage_fixed: true
     lint:
       glob: "*.{ts,tsx,js,jsx}"
