--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,17 +38,21 @@
   "scripts": {
     "dev": "tsdown src/index.ts --format cjs,esm --dts --watch",
     "build": "tsdown src/index.ts --format cjs,esm --dts --clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@temporal-contract/core": "workspace:*"
   },
   "devDependencies": {
-    "@temporal-contract/tsconfig": "workspace:*",
     "@temporalio/client": "catalog:",
+    "@temporal-contract/tsconfig": "workspace:*",
+    "@types/node": "catalog:",
     "tsdown": "catalog:",
-    "type-fest": "5.3.1",
+    "type-fest": "catalog:",
     "typescript": "catalog:",
+    "vitest": "catalog:",
     "zod": "catalog:"
   },
   "peerDependencies": {
