--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,12 +1,9 @@
 name: "Setup Node.js and pnpm"
-description: "Checkout code, setup Node.js and pnpm, install dependencies"
+description: "Setup Node.js and pnpm, install dependencies"
 
 runs:
   using: "composite"
   steps:
-    - name: Checkout
-      uses: actions/checkout@v6
-
     - name: Setup pnpm
       uses: pnpm/action-setup@v4
       with:
