--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,9 @@
 #       id-token: write
 
 #     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v6
+#
 #       - name: Setup
 #         uses: ./.github/actions/setup
 
