--- a/packages/worker-boxed/package.json
+++ b/packages/worker-boxed/package.json
@@ -38,11 +38,9 @@
     "future"
   ],
   "dependencies": {
-    "@swan-io/boxed": "^3.2.1",
-    "@temporal-contract/core": "workspace:*",
-    "@temporal-contract/worker": "workspace:*",
-    "@temporalio/workflow": "catalog:",
-    "zod": "catalog:"
+    "@swan-io/boxed": "catalog:",
+    "@temporal-contract/contract": "workspace:*",
+    "@temporal-contract/worker": "workspace:*"
   },
   "devDependencies": {
     "@temporal-contract/tsconfig": "workspace:*",
