--- a/samples/basic-order-processing/package.json
+++ b/samples/basic-order-processing/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@temporal-contract/client": "workspace:*",
     "@temporal-contract/contract": "workspace:*",
-    "@temporal-contract/core": "workspace:*",
     "@temporal-contract/worker": "workspace:*",
     "@temporalio/client": "catalog:",
     "@temporalio/worker": "catalog:",
     "@temporalio/workflow": "catalog:",
+    "pino": "catalog:",
+    "pino-pretty": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
