--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,10 +10,12 @@ catalog:
   "@temporalio/client": 1.13.2
   "@temporalio/worker": 1.13.2
   "@temporalio/workflow": 1.13.2
-  "@types/node": 24.10.1
+  "@types/node": 24.10.2
   lefthook: 2.0.9
   oxfmt: 0.17.0
   oxlint: 1.32.0
+  pino: 10.1.0
+  pino-pretty: 13.1.3
   ts-node: 10.9.2
   tsdown: 0.17.2
   tsx: 4.21.0
