refactor: remove any

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./node_modules/oxlint/configuration_schema.json",
   "rules": {
-    "sort-imports": "off"
+    "sort-imports": "off",
+    "@typescript-eslint/no-explicit-any": "error"
   }
 }
