--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -32,7 +32,8 @@
         "types": "./dist/index.d.cts",
         "default": "./dist/index.cjs"
       }
-    }
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "dev": "tsdown src/index.ts --format cjs,esm --dts --watch",
@@ -49,6 +50,6 @@
     "zod": "catalog:"
   },
   "peerDependencies": {
-    "zod": ">=4.0.0 <5.0.0"
+    "zod": "^4.0.0"
   }
 }
