--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,12 +33,15 @@
         "types": "./dist/index.d.cts",
         "default": "./dist/index.cjs"
       }
-    }
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "dev": "tsdown src/index.ts --format cjs,esm --dts --watch",
     "build": "tsdown src/index.ts --format cjs,esm --dts --clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@temporal-contract/contract": "workspace:*"
@@ -55,6 +58,6 @@
   },
   "peerDependencies": {
     "@temporalio/client": ">=1.13.0 <2.0.0",
-    "zod": ">=4.0.0 <5.0.0"
+    "zod": "^4.0.0"
   }
 }
