--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -33,7 +33,8 @@
         "types": "./dist/index.d.cts",
         "default": "./dist/index.cjs"
       }
-    }
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "dev": "tsdown src/index.ts --format cjs,esm --dts --watch",
@@ -56,6 +57,6 @@
   },
   "peerDependencies": {
     "@temporalio/workflow": ">=1.13.0 <2.0.0",
-    "zod": ">=4.0.0 <5.0.0"
+    "zod": "^4.0.0"
   }
 }
