--- a/packages/worker-boxed/package.json
+++ b/packages/worker-boxed/package.json
@@ -13,7 +13,8 @@
         "types": "./dist/index.d.cts",
         "default": "./dist/index.cjs"
       }
-    }
+    },
+    "./package.json": "./package.json"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -51,6 +52,7 @@
     "zod": "catalog:"
   },
   "peerDependencies": {
-    "@temporalio/worker": ">=1.0.0"
+    "@temporalio/worker": ">=1.0.0",
+    "zod": "^4.0.0"
   }
 }
