--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,6 +16,7 @@ catalog:
   oxlint: 1.32.0
   pino: 10.1.0
   pino-pretty: 13.1.3
+  testcontainers: 11.9.0
   ts-node: 10.9.2
   tsdown: 0.17.2
   tsx: 4.21.0
