--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -24,21 +24,31 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "exports": {
-    ".": {
+    "./activity": {
       "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
+        "types": "./dist/activity.d.mts",
+        "default": "./dist/activity.mjs"
       },
       "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
+        "types": "./dist/activity.d.cts",
+        "default": "./dist/activity.cjs"
+      }
+    },
+    "./workflow": {
+      "import": {
+        "types": "./dist/workflow.d.mts",
+        "default": "./dist/workflow.mjs"
+      },
+      "require": {
+        "types": "./dist/workflow.d.cts",
+        "default": "./dist/workflow.cjs"
       }
     },
     "./package.json": "./package.json"
   },
   "scripts": {
-    "dev": "tsdown src/index.ts --format cjs,esm --dts --watch",
-    "build": "tsdown src/index.ts --format cjs,esm --dts --clean",
+    "dev": "tsdown src/activity.ts src/workflow.ts --format cjs,esm --dts --watch",
+    "build": "tsdown src/activity.ts src/workflow.ts --format cjs,esm --dts --clean",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest"
