--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,30 +1,30 @@
-# name: Release
+name: Release
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# concurrency: ${{ github.workflow }}-${{ github.ref }}
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
-# jobs:
-#   release:
-#     name: Release
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: write
-#       pull-requests: write
-#       id-token: write
+jobs:
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      id-token: write
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v6
-#
-#       - name: Setup
-#         uses: ./.github/actions/setup
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
 
-#       - name: Build
-#         run: pnpm build
+      - name: Setup
+        uses: ./.github/actions/setup
+
+      - name: Build
+        run: pnpm build
 
 #       - name: Create Release Pull Request or Publish to npm
 #         id: changesets
