--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,7 +7,8 @@
       "@temporal-contract/contract",
       "@temporal-contract/worker",
       "@temporal-contract/worker-boxed",
-      "@temporal-contract/client"
+      "@temporal-contract/client",
+      "@temporal-contract/testing"
     ]
   ],
   "linked": [],
