--- a/samples/boxed-order-processing/package.json
+++ b/samples/boxed-order-processing/package.json
@@ -26,6 +26,7 @@
     "@temporal-contract/testing": "workspace:*",
     "@temporal-contract/tsconfig": "workspace:*",
     "@types/node": "catalog:",
+    "@vitest/coverage-v8": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:"
