--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,12 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run tests
-        run: pnpm test
+        run: pnpm test -- --coverage --reporter=default --reporter=github-actions
+
+      - name: Upload Coverage Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: ./**/coverage/
+          retention-days: 30
