--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@temporal-contract/tsconfig": "workspace:*",
+    "@vitest/coverage-v8": "catalog:",
     "tsdown": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:",
