--- a/packages/worker-boxed/package.json
+++ b/packages/worker-boxed/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@temporal-contract/tsconfig": "workspace:*",
     "@types/node": "catalog:",
+    "@vitest/coverage-v8": "catalog:",
     "tsdown": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:",
