--- a/samples/basic-order-processing/package.json
+++ b/samples/basic-order-processing/package.json
@@ -25,6 +25,7 @@
     "@temporal-contract/testing": "workspace:*",
     "@temporal-contract/tsconfig": "workspace:*",
     "@types/node": "catalog:",
+    "@vitest/coverage-v8": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:"
