refactor: boxed error handling

--- a/samples/boxed-order-processing/package.json
+++ b/samples/boxed-order-processing/package.json
@@ -20,6 +20,7 @@
     "@temporalio/workflow": "catalog:",
     "pino": "catalog:",
     "pino-pretty": "catalog:",
+    "ts-pattern": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
