--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,6 +19,7 @@ catalog:
   pino-pretty: 13.1.3
   testcontainers: 11.10.0
   ts-node: 10.9.2
+  ts-pattern: 5.9.0
   tsdown: 0.17.2
   tsx: 4.21.0
   turbo: 2.6.3
