--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,12 +7,7 @@ runs:
     - name: Setup pnpm
       uses: pnpm/action-setup@v4
       with:
-        run_install: false
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v6
-      with:
-        cache: "pnpm"
+        cache: true
 
     - name: Install dependencies
       shell: bash
