--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,6 +12,7 @@ catalog:
   "@temporalio/workflow": 1.13.2
   "@types/node": 24.10.2
   "@vitest/coverage-v8": 4.0.15
+  knip: 5.73.1
   lefthook: 2.0.9
   oxfmt: 0.17.0
   oxlint: 1.32.0
