--- a/samples/boxed-order-processing/package.json
+++ b/samples/boxed-order-processing/package.json
@@ -17,6 +17,7 @@
     "@temporal-contract/worker-boxed": "workspace:*",
     "@temporalio/client": "catalog:",
     "@temporalio/worker": "catalog:",
+    "@temporalio/workflow": "catalog:",
     "pino": "catalog:",
     "zod": "catalog:"
   },
