--- a/packages/worker-boxed/package.json
+++ b/packages/worker-boxed/package.json
@@ -63,7 +63,7 @@
     "zod": "catalog:"
   },
   "peerDependencies": {
-    "@temporalio/worker": ">=1.0.0",
+    "@temporalio/workflow": ">=1.13.0 <2.0.0",
     "zod": "^4.0.0"
   }
 }
