--- a/samples/order-processing-client/tsconfig.json
+++ b/samples/order-processing-client/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@temporal-contract/tsconfig/base.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src"]
 }
