--- a/samples/order-processing-worker/tsconfig.json
+++ b/samples/order-processing-worker/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "@temporal-contract/tsconfig/sample.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./src"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist"]
 }
