--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -54,8 +54,9 @@
   "scripts": {
     "build": "tsdown src/activity.ts src/workflow.ts --format cjs,esm --dts --clean",
     "dev": "tsdown src/activity.ts src/workflow.ts --format cjs,esm --dts --watch",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --project unit",
+    "test:integration": "vitest run --project integration",
+    "test:watch": "vitest --project unit",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -64,7 +65,12 @@
     "@temporal-contract/contract": "workspace:*"
   },
   "devDependencies": {
+    "@swan-io/boxed": "catalog:",
+    "@temporal-contract/client": "workspace:*",
+    "@temporal-contract/testing": "workspace:*",
     "@temporal-contract/tsconfig": "workspace:*",
+    "@temporalio/client": "catalog:",
+    "@temporalio/worker": "catalog:",
     "@temporalio/workflow": "catalog:",
     "@types/node": "catalog:",
     "@vitest/coverage-v8": "catalog:",
