--- a/packages/boxed/package.json
+++ b/packages/boxed/package.json
@@ -18,7 +18,7 @@
     "directory": "packages/boxed"
   },
   "license": "MIT",
-  "author": "Benoit TRAVERS <benoit.travers@gmail.com>",
+  "author": "Benoit TRAVERS <benoit.travers.fr@gmail.com>",
   "type": "module",
   "exports": {
     ".": {
