--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -17,7 +17,7 @@
     "directory": "packages/contract"
   },
   "license": "MIT",
-  "author": "Benoit TRAVERS <benoit.travers.frgmail.com>",
+  "author": "Benoit TRAVERS <benoit.travers.fr@gmail.com>",
   "type": "module",
   "exports": {
     ".": {
