--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,7 @@
     "directory": "packages/client"
   },
   "license": "MIT",
-  "author": "Benoit TRAVERS <benoit.travers.frgmail.com>",
+  "author": "Benoit TRAVERS <benoit.travers.fr@gmail.com>",
   "type": "module",
   "exports": {
     ".": {
