--- a/packages/worker-nestjs/package.json
+++ b/packages/worker-nestjs/package.json
@@ -55,8 +55,9 @@
   "scripts": {
     "build": "tsdown src/activity.ts src/workflow.ts --format cjs,esm --dts --clean",
     "dev": "tsdown src/activity.ts src/workflow.ts --format cjs,esm --dts --watch",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --project unit",
+    "test:integration": "vitest run --project integration",
+    "test:watch": "vitest --project unit",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -69,6 +70,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "catalog:",
+    "@temporal-contract/testing": "workspace:*",
     "@temporal-contract/tsconfig": "workspace:*",
     "@temporalio/workflow": "catalog:",
     "@types/node": "catalog:",
