--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,8 @@
       "dependsOn": ["^build"]
     },
     "test": {
-      "dependsOn": ["build"]
+      "dependsOn": ["build"],
+      "cache": false
     },
     "test:integration": {
       "dependsOn": ["build"],
