--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,45 +4,43 @@ packages:
   - tools/*
   - website
 
-catalog:
-  "@changesets/cli": 2.29.8
-  "@commitlint/cli": 20.2.0
-  "@commitlint/config-conventional": 20.2.0
-  "@nestjs/common": 11.1.9
-  "@nestjs/core": 11.1.9
-  "@nestjs/testing": 11.1.9
-  "@standard-schema/spec": 1.1.0
-  "@swan-io/boxed": 3.2.1
-  "@temporalio/client": 1.14.0
-  "@temporalio/worker": 1.14.0
-  "@temporalio/workflow": 1.14.0
-  "@types/node": 25.0.3
-  "@vitest/coverage-v8": 4.0.16
-  arktype: 2.1.29
-  knip: 5.75.2
-  lefthook: 2.0.12
-  oxfmt: 0.19.0
-  oxlint: 1.34.0
-  pino: 10.1.0
-  pino-pretty: 13.1.3
-  reflect-metadata: 0.2.2
-  sort-package-json: 3.6.0
-  testcontainers: 11.10.0
-  ts-pattern: 5.9.0
-  tsdown: 0.18.1
-  tsx: 4.21.0
-  turbo: 2.6.3
-  typescript: 5.9.3
-  valibot: 1.2.0
-  vitest: 4.0.16
-  zod: 4.2.1
-
-ignoredBuiltDependencies:
-  - "@nestjs/core"
-  - "@swc/core"
+onlyBuiltDependencies:
   - "@temporalio/core-bridge"
-  - cpu-features
   - esbuild
   - lefthook
   - protobufjs
-  - ssh2
+
+strictPeerDependencies: false
+
+catalog:
+  "@changesets/cli": 2.29.8
+  "@commitlint/cli": 20.3.1
+  "@commitlint/config-conventional": 20.3.1
+  "@nestjs/common": 11.1.12
+  "@nestjs/core": 11.1.12
+  "@nestjs/testing": 11.1.12
+  "@standard-schema/spec": 1.1.0
+  "@swan-io/boxed": 3.2.1
+  "@temporalio/client": 1.14.1
+  "@temporalio/worker": 1.14.1
+  "@temporalio/workflow": 1.14.1
+  "@types/node": 25.0.9
+  "@vitest/coverage-v8": 4.0.17
+  arktype: 2.1.29
+  knip: 5.82.1
+  lefthook: 2.0.15
+  oxfmt: 0.26.0
+  oxlint: 1.41.0
+  pino: 10.2.1
+  pino-pretty: 13.1.3
+  reflect-metadata: 0.2.2
+  sort-package-json: 3.6.0
+  testcontainers: 11.11.0
+  ts-pattern: 5.9.0
+  tsdown: 0.20.0-beta.4
+  tsx: 4.21.0
+  turbo: 2.7.5
+  typescript: 5.9.3
+  valibot: 1.2.0
+  vitest: 4.0.17
+  zod: 4.3.5
