--- a/docs/package.json
+++ b/docs/package.json
@@ -6,9 +6,9 @@
   "author": "Benoit TRAVERS",
   "type": "module",
   "scripts": {
-    "build": "vitepress build docs",
-    "dev": "vitepress dev docs",
-    "preview": "vitepress preview docs"
+    "build": "vitepress build",
+    "dev": "vitepress dev",
+    "preview": "vitepress preview"
   },
   "devDependencies": {
     "mermaid": "11.12.2",
