--- a/packages/client-nestjs/package.json
+++ b/packages/client-nestjs/package.json
@@ -63,6 +63,8 @@
     "@vitest/coverage-v8": "catalog:",
     "reflect-metadata": "catalog:",
     "tsdown": "catalog:",
+    "typedoc": "catalog:",
+    "typedoc-plugin-markdown": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:",
     "zod": "catalog:"
