--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -56,6 +56,8 @@
     "@vitest/coverage-v8": "catalog:",
     "arktype": "catalog:",
     "tsdown": "catalog:",
+    "typedoc": "catalog:",
+    "typedoc-plugin-markdown": "catalog:",
     "typescript": "catalog:",
     "valibot": "catalog:",
     "vitest": "catalog:"
