feat: add @temporal-contract/*-effect packages
- Introduced a new packages for an Effect-native typed Temporal client,
  enabling seamless interaction with workflows using Effect's error
handling and type safety.
- Added necessary dependencies and configurations in package.json and
  pnpm-lock.yaml.
- Created initial structure including README, TypeScript configuration,
  and test setup.
- Implemented core functionality for executing and starting workflows
  with typed inputs and outputs.
- Added error handling classes for better error management in workflow
  execution.

This package serves as a foundational component for building
Effect-native applications with Temporal.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@changesets/cli": "catalog:",
     "@commitlint/cli": "catalog:",
     "@commitlint/config-conventional": "catalog:",
+    "@rolldown/binding-darwin-arm64": "1.0.0-rc.3",
     "knip": "catalog:",
     "lefthook": "catalog:",
     "oxfmt": "catalog:",
