--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ packages:
 
 catalog:
   "@changesets/cli": 2.29.8
+  effect: 3.15.1
   "@commitlint/cli": 20.4.1
   "@commitlint/config-conventional": 20.4.1
   "@nestjs/common": 11.1.13
